--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     
       </head>
 
-      <body class="max-w-9xl mx-auto px-2 bg-gray-100">
+      <body class="mx-auto px-2 bg-gray-100">
         <!-- Cabeçalho fixo -->
         <header class="fixed top-0 left-0 w-full text-white">
             <div class="container mx-auto flex items-center justify-between p-3">
                 <!-- Logo -->
                 <div class="text-2xl font-bold">
                     <a class="navbar-brand" href="index.html">
-                        <img src="../img/10000.png" alt="Descrição da Imagem" class="w-48 h-auto rounded">
+                        <img src="../img/10000.png" alt="Descrição da Imagem" class="w-16 md:w-32 lg:w-48">
                     </a>
                 </div>
         
