--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
       </head>
 
-      <body class="mx-auto px-2 bg-gray-100">
+      <body class="mx-auto px-4 sm:px-6 lg:px-8 bg-gray-100 max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl xl:max-w-6xl">
         <!-- Cabeçalho fixo -->
         <header class="fixed top-0 left-0 w-full text-white">
             <div class="container mx-auto flex items-center justify-between p-3">
