--- a/index.html
+++ b/index.html
@@ -338,7 +338,26 @@
         </script>
 
         
-
+        <!-- Footer Start -->
+    <div
+    class="container-fluid bg-dark text-white py-5"
+    id="contact"
+    style="margin-top: 90px"
+  >
+    <div class="container text-center py-5">
+      <div class="position-relative text-center">
+        <h5 class="font-bold text-white" style="font-size: 25px;">Agradeço de coração pelo seu carinho e apoio. <br> 
+          Estou feliz em poder representar a população santarritense.
+        <br> Jamil Xavier de Carvalho Neto </h5>
+      </div> 
+      <br>
+        &copy; <a class="text-primary" href="#"></a>Designed by
+      </p>
+      <a class="text-white" href="">WEBTECH <br> UAI CRIATIVO </a>
+      
+    </div>
+  </div>
+  <!-- Footer End -->
 
 
     </body>
