--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
       </head>
 
       <body class="min-h-screen max-w-full overflow-x-hidden">
+
+        <div class="fixed bottom-4 right-4">
+            <a href="https://w.app/10milenumerodojamil">
+                <img src="img/logo-whatsapp.png" alt="WhatsApp Logo" class="w-12 h-12">
+            </a>
+        </div>
+
         <!-- Cabeçalho fixo -->
         <header class="fixed top-0 left-0 w-full text-white">
             <div class="container mx-auto flex items-center justify-between p-3">
@@ -353,7 +360,7 @@
       <br>
         &copy; <a class="text-primary" href="#"></a>Designed by
       </p>
-      <a class="text-white" href="">WEBTECH <br> UAI CRIATIVO </a>
+      <a class="text-white" href="">UAI CRIATIVO </a>
       
     </div>
   </div>
