--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <!-- Inicio Meu trabalhos voluntários. -->
             <div class="max-w-full overflow-hidden p-4">
                 <div class="text-center container mx-auto p-4">
-                    <h1 class="hover:text-amber-400 text-3xl font-bold">Meu trabalhos voluntários?</h1>
+                    <h1 class="hover:text-amber-400 text-3xl font-bold">Meu trabalhos voluntários!</h1>
                 </div>
                 <!-- <div class="flex justify-center p-2">
                     <img src="img/10000.png" alt="" class="h-auto">
@@ -140,7 +140,7 @@
              <!-- Inicio meus apoaiadores -->
             <div class="max-w-full overflow-hidden p-4">
                 <div class="text-center container mx-auto p-4">
-                    <h1 class="text-3xl font-bold">Meus apoiadores</h1>
+                    <h1 class="text-3xl font-bold">Meus apoiadores!</h1>
                     <p></p>
                 </div>
 
@@ -168,8 +168,8 @@
              <!-- Inicio Propostas/capacitação profissional -->
             <div class="max-w-full overflow-hidden">
                 <div class="text-center container mx-auto p-10">
-                    <h1 class="hover:text-amber-400 text-4xl font-bold">Proposta de governo?</h1> <br>
-                    <h1 class="hover:text-amber-400 text-3xl font-bold">Capacitação de Profissionais?</h1>
+                    <h1 class="hover:text-amber-400 text-4xl font-bold">Minhas Proposta de governo</h1> <br>
+                    <h1 class="hover:text-amber-400 text-3xl font-bold">Capacitação de Profissionais</h1>
                 </div>
                 <div class="flex justify-center">
                     <img src="img/10000.png" alt="" class="h-auto">
@@ -177,12 +177,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
@@ -199,12 +197,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
@@ -221,12 +217,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
@@ -243,12 +237,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
@@ -265,12 +257,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
@@ -287,12 +277,10 @@
                 <div class="flex flex-col items-center justify-center">
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
-                        <p class="break-words text-center">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                            ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                            jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                            fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                            jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                            jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                        <p class="break-words text-center">
+                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
+                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                        <p class="break-words text-center font-bold text-black text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
             </div>
