texto apoio e cemitério

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
                         <p class="break-words text-center">
-                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
-                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                            Criar um centro de apoio ao empreendedorismo local, oferecendo orientação, 
+                            treinamento e acesso a recursos para pequenos empresários e novos empreendedores.</p>
                         <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
@@ -218,9 +218,9 @@
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
                         <p class="break-words text-center">
-                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
-                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
-                        <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
+                            Criar um centro de apoio ao empreendedorismo local, oferecendo orientação, 
+                            treinamento e acesso a recursos para pequenos empresários e novos empreendedores. </p>
+                        <p class="break-words text-center font-bold text-black">Objetivo: Fomentar o desenvolvimento de negócios locais e aumentar as oportunidades de emprego na cidade.</p>
                     </div>
                 </div>
             </div>
@@ -238,8 +238,8 @@
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
                         <p class="break-words text-center">
-                            Estabelecer parcerias com instituições de ensino e empresas para oferecer 
-                            cursos de capacitação e especialização para a população local total gratuito com certificado. </p>
+                            O projeto visa criar um cemitério dedicado para gatos, cachorros e pequenos 
+                            animais de estimação, oferecendo um local digno e respeitoso para a sepultura e lembrança desses animais amados. </p>
                         <p class="break-words text-center font-bold text-black">Objetivo: Aumentar a qualificação profissional e a empregabilidade dos cidadãos.</p>
                     </div>
                 </div>
