--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- Logo -->
                 <div class="text-2xl font-bold">
                     <a class="navbar-brand" href="index.html">
-                        <img src="../img/10000.png" alt="Descrição da Imagem" class="w-16 md:w-32 lg:w-48">
+                        <img src="../img/10000 (1).png" alt="Descrição da Imagem" class="w-16 md:w-32 lg:w-48">
                     </a>
                 </div>
             </div>
