--- a/index.html
+++ b/index.html
@@ -93,12 +93,16 @@
             <div class="flex flex-col items-center justify-center">
                 <!-- Div para o texto -->
                 <div class="w-full p-4">
-                    <p class="break-words text-center text-center text-black">texto textomnd  uwjehdbewufwe iuwwgf weiufh ewhfhidslo,feofd,
-                        ,lçds,mflwmflmfldmlfmlfmldsmfkodsmfioknmfiodfmjoikfjiofjweioef
-                        jkjkenjfenijfenwjifnewjiwnfweijnfiujwnfiujiujehfdiuehfdioewhfioe
-                        fjkio0ejroiewjjrfeiwowjfiowejrfioewjrpfojeoprfjpe
-                        jkewndfioewniofneiofneoinfioenfioewjnfiowenjfoinfoijrpojrpo32kr
-                        jdiojedi9wjfioewjhfiuqjheoiji9duiorhrwqiehji3ehji23jhri2hrfi></p>
+                    <p class="break-words text-center text-center text-black">
+                        Jamil é um nome que ecoa em Santa Rita. Sempre presente nas festas, nos carnavais, 
+                        no sete de setembro, e em todas as ocasiões que exigem dedicação e amor pela nossa cidade, 
+                        Jamil sempre se destacou pelo seu trabalho voluntário. Com um sorriso no rosto e um coração 
+                        sem mágoas, ele se dedica de corpo e alma a tudo o que faz. Atuou como juiz de futebol, 
+                        liderou eventos comunitários, e esteve à frente de várias ações que fizeram a diferença 
+                        para muitos. Quem conhece Jamil sabe da sua integridade, do seu compromisso com a comunidade 
+                        e do seu desejo sincero de ver Santa Rita prosperar. Agora, como candidato a vereador, Jamil 
+                        se coloca à disposição para fazer ainda mais, com o mesmo empenho e dedicação que sempre 
+                        demonstrou. Ele é, acima de tudo, um homem do povo, comprometido em trabalhar para o bem de todos.</p>
                 </div>
             </div>
         </div>
