--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="text-center container mx-auto">
                     <h1 class="hover:text-amber-400 text-3xl font-bold">Cimitério para gatos e cachorros e pequenos portes</h1>
                 </div>
-                <div class="flex justify-center p-2">
+                <div class="flex justify-center">
                     <img src="img/10000.png" alt="" class="h-auto">
                 </div>
                 <div class="w-full">
