Correção casa de recuperação

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 
 
             <!-- Inicio Meu trabalhos voluntários. -->
-            <div class="max-w-full overflow-hidden p-4">
-                <div class="text-center container mx-auto p-4">
+            <div class="max-w-full overflow-hidden">
+                <div class="text-center container mx-auto pb-2">
                     <h1 class="hover:text-amber-400 text-3xl font-bold">Meu trabalhos voluntários!</h1>
                 </div>
                 <!-- <div class="flex justify-center p-2">
@@ -146,7 +146,7 @@
                     <!-- Div para o texto -->
                     <div class="w-full p-4">
                         <ul class="break-words list-disc list-inside text-center font-bold text-black">
-                            <li>Estou a 25 anos como regente na fanfarra na E.E.DR. Delfim Moreira (Grupão)</li>
+                            <li>Estou a 30 anos como regente na fanfarra na E.E.DR. Delfim Moreira (Grupão)</li>
                             <li>Participei como marcador de festa junina nos bairros</li>
                             <li>Já fui árbitro de futebol, inicialmente sem lucro, apenas por amor ao futebol.</li>
                             <li>Participei diversas vezes voluntariamente em escolas de samba no Carnaval </li>
@@ -357,7 +357,7 @@
              <!-- Inicio Casa de recuperação -->
             <div class="max-w-full overflow-hidden bg-blue-50 pt-8">
                 <div class="text-center container mx-auto">
-                    <h1 class="hover:text-amber-400 text-3xl font-bold">Casa de recuperação e após serviço de free lance</h1>
+                    <h1 class="hover:text-amber-400 text-3xl font-bold">Casa de ressocialização com insetivo trabalho</h1>
                 </div>
                 <div class="flex justify-center">
                     <img src="img/10000.png" alt="" class="h-auto">
