--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Rjr Soluções" name="description" />
 
     <!-- Favicon -->
-    <link rel="icon" href="./img/favicon.png" type="image/png">
+    <link rel="icon" href="./img/10k.png" type="image/png">
 
 
     <!-- Google Web Fonts -->
