empresa desenvolvedora do site

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>10milenumerodojamil</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Rjr Soluções" name="keywords" />
-    <meta content="Rjr Soluções" name="description" />
+    <meta content="UAI CRIATIVO" name="keywords" /> <!--Nome da empresa desenvolvedora -->
+    <meta content="UAI CRIATIVO" name="description" /> <!--Nome da empresa desenvolvedora -->
 
     <!-- Favicon -->
     <link rel="icon" href="./img/10k.png" type="image/png">
