correção texto Respeito e Gratidão:

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <!-- Texto 2 (oculto por padrão) -->
                     <div class="moreText mt-4 hidden">
                         <p class="break-words text-center font-bold text-blue-400 text-2xl pt-8">Objetivo do Projeto</p>
-                        <p class="flex items-center justify-center text-black font-bold py-2">tRespeito e Gratidão:
+                        <p class="flex items-center justify-center text-black font-bold py-2">Respeito e Gratidão:
                         </p>
                         <ul class="break-words list-disc list-inside text-center text-black">
                             <li>Nossos animais de estimação nos proporcionam alegria, conforto e muitas vezes são verdadeiros membros de nossas famílias. Eles merecem ser tratados com respeito até o final de suas vidas, e um enterro digno é uma forma de expressar nossa gratidão por tudo o que fizeram por nós.</li>
