--- a/index.html
+++ b/index.html
@@ -551,6 +551,43 @@
             </div>
              <!-- fim Restaurante popular -->
 
+             <!-- Início meus apoiadores -->
+            <div class="max-w-full overflow-hidden relative">
+                <div class="whitespace-nowrap animation-marquee">
+                    <p class="inline-block px-2 py-2">
+                        <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
+                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                        </a>
+                    </p>
+                    <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
+                    <p class="inline-block py-2">
+                        <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
+                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                        </a>
+                    </p>
+                    <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
+                    <p class="inline-block py-2">
+                        <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
+                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                        </a>
+                    </p>
+                    <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
+                    <p class="inline-block py-2">
+                        <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
+                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                        </a>
+                    </p>
+                    <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
+                    <p class="inline-block py-2">
+                        <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
+                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                        </a>
+                    </p>
+                </div>
+            </div>
+            <!-- Fim meus apoiadores -->
+
+
     
                 <!-- <div class="text-center container mx-auto p-4">
                     <h1 class="text-3xl font-bold">Meu trabalhos voluntários.</h1>
@@ -601,7 +638,7 @@
     <div
     class="container-fluid bg-dark text-white py-5"
     id="contact"
-    style="margin-top: 90px"
+    style="margin-top: 9px"
   >
     <div class="container text-center py-5">
       <div class="position-relative text-center">
