--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             </div>
              <!-- fim Restaurante popular -->
 
-             <!-- Início meus apoiadores -->
+             <!-- Início propaganda carrosel -->
             <div class="max-w-full overflow-hidden relative">
                 <div class="whitespace-nowrap animation-marquee">
                     <p class="inline-block px-2 py-2">
@@ -585,7 +585,7 @@
                     </p>
                 </div>
             </div>
-            <!-- Fim meus apoiadores -->
+            <!-- propaganda carrosel -->
 
 
     
