--- a/index.html
+++ b/index.html
@@ -556,31 +556,31 @@
                 <div class="whitespace-nowrap animation-marquee">
                     <p class="inline-block px-2 py-2">
                         <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
-                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                            Clique aqui! Entre em contato e crie o site dos seus sonhos.
                         </a>
                     </p>
                     <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
                     <p class="inline-block px-2 py-2">
                         <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
-                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                            Clique aqui! Entre em contato e crie o site dos seus sonhos.
                         </a>
                     </p>
                     <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
                     <p class="inline-block px-2 py-2">
                         <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
-                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                            Clique aqui! Entre em contato e crie o site dos seus sonhos.
                         </a>
                     </p>
                     <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
                     <p class="inline-block px-2 py-2">
                         <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
-                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                            Clique aqui! Entre em contato e crie o site dos seus sonhos.
                         </a>
                     </p>
                     <!-- Duplicar o texto para garantir que a rolagem seja contínua -->
                     <p class="inline-block px-2 py-2">
                         <a href="https://wa.me/+553599539535" target="_blank" class="hover:underline text-blue-500">
-                            Transforme sua presença online! Entre em contato e crie o site dos seus sonhos.
+                            Clique aqui! Entre em contato e crie o site dos seus sonhos.
                         </a>
                     </p>
                 </div>
