--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                         <img class="img-fluid w-100" src="img/Apoiadores/Pastor Jonathas.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
                             <p class="text-center font-bold text-blue-400">Pastor Jônathas</p>
                     </div>
+                    <div class=""> 
+                        <img class="img-fluid w-100" src="img/Apoiadores/kenedy.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
+                            <p class="text-center font-bold text-blue-400">Kenedy</p>
+                    </div>
                     
                     
                 </div>
