--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
                     <p></p>
                 </div>
 
-                <div class="flex justify-center space-x-4">
-                    <video class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
+                <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
                         <source src="img/video pastor flavio, jamil e estevão.mp4" type="video/mp4">
                         Seu navegador não suporta o elemento de vídeo.
                     </video>
-                    <video class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
+                    <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
                         <source src="img/Apoiadores/video pastor jonathas.mp4" type="video/mp4">
                         Seu navegador não suporta o elemento de vídeo.
                     </video>
-                </div>                                     
+                </div>                                                               
 
                 <div class="owl-carousel gallery-carousel max-w-full overflow-hidden p-4">
                     <!-- imagem deve ser tamanho 3/4 -->
