--- a/index.html
+++ b/index.html
@@ -189,12 +189,13 @@
 
                 <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                     <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
+                        <source src="img/Apresentação.mp4" type="video/mp4">
+                    </video>
+                    <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls></video>
                         <source src="img/video pastor flavio, jamil e estevão.mp4" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
                     </video>
                     <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
                         <source src="img/Apoiadores/video pastor jonathas.mp4" type="video/mp4">
-                        Seu navegador não suporta o elemento de vídeo.
                     </video>
                 </div>                                                               
 
@@ -260,7 +261,7 @@
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/ambulancia.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
-                                <p class="text-center font-bold text-blue-400">Ambulância</p>
+                                <p class="text-center font-bold text-blue-400">Ambulância para Rua Nova</p>
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/segurança 1.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
@@ -272,7 +273,7 @@
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/Quadra ar livre.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
-                                <p class="text-center font-bold text-blue-400">Quadra ao ar livre Rua Nova</p>
+                                <p class="text-center font-bold text-blue-400">Quadra ao ar livre e cobertura para quadra da Rua Nova</p>
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/braço luz.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
