--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
             </div>
         </div>
 
+        <div class="max-w-full overflow-hidden pb-8">
+            <div class="text-center container mx-auto">
+                <h1 class="text-3xl font-bold"></h1>
+                <p></p>
+            </div>
+
+            <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
+                <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
+                    <source src="img/Apresentação.mp4" type="video/mp4">
+                    Seu navegador não suporta o elemento de vídeo.
+                </video>
+            </div> 
+        </div>
+
 
             <!-- Inicio Meu trabalhos voluntários. -->
             <div class="max-w-full overflow-hidden">
@@ -189,13 +203,12 @@
 
                 <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
                     <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
-                        <source src="img/Apresentação.mp4" type="video/mp4">
-                    </video>
-                    <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls></video>
                         <source src="img/video pastor flavio, jamil e estevão.mp4" type="video/mp4">
+                        Seu navegador não suporta o elemento de vídeo.
                     </video>
                     <video class="mx-auto w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-sm xl:max-w-xs h-auto max-h-96" controls>
                         <source src="img/Apoiadores/video pastor jonathas.mp4" type="video/mp4">
+                        Seu navegador não suporta o elemento de vídeo.
                     </video>
                 </div>                                                               
 
