correção projeto ambulancia

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/ambulancia.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
-                                <p class="text-center font-bold text-blue-400">Ambulância para Rua Nova</p>
+                                <p class="text-center font-bold text-blue-400">Ambulância para Nova Cidade</p>
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/segurança 1.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
@@ -286,7 +286,7 @@
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/Quadra ar livre.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
-                                <p class="text-center font-bold text-blue-400">Quadra ao ar livre e cobertura para quadra da Rua Nova</p>
+                                <p class="text-center font-bold text-blue-400">Quadra ao ar livre e cobertura para quadra da Rua Nova. Projeto concluído</p>
                         </div>
                         <div class=""> 
                             <img class="img-fluid w-100" src="img/minhas indicações/braço luz.jpg" alt="" /> <!-- imagem deve ser tamanho 3/4 -->
