alteração numero whatsapp

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <body class="min-h-screen max-w-full overflow-x-hidden">
 
         <div class="fixed bottom-4 right-4 z-50">
-            <a href="https://w.app/10milenumerodojamil">
+            <a href="https://wa.me/+5535997021704">
                 <img src="img/logo-whatsapp.png" alt="WhatsApp Logo" class="w-12 h-12">
             </a>
         </div>
